--- a/priv/testing/area.adoc
+++ b/priv/testing/area.adoc
@@ -24,7 +24,7 @@ Against all odds, you detect something interesting here: by listening for echos 
 == Exits
 
 * link:areas/forest/101.adoc[cavern exit | north, n]
-* link:areas/caves/system2/.adoc[down]
+* link:areas/caves/system2/.adoc[descend deeper | down]
 
 == Items
 
